tests/neg/false.fq
constraint:
  env []
  lhs {v : int | true}
  rhs {v : int | false}
  id 0 tag []
